# synapse

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Polling_To_Sockets_TODO.md  README.md  TODO.md  dialyzer.ignore-warnings.exs  direction.md  error_handling.md  initial_testing.md  mix.exs  prelim_discussion.md  protobuf_setup.exs  replit.nix  search_history.sh  setup.exs  setup.sh  start.sh  verify_setup.exs
apps/axon/: mix.exs
apps/axon_core/: agent_grpc_server.ex  mix.exs
apps/axon_core/priv/python/: pyproject.toml  setup.py
apps/axon_python/: README.md  direction.md  grpc_and_pydanticai_examples.md  mix.exs  pyproject.toml
apps/axon_python/lib/: axon_python.ex
apps/axon_python/scripts/: start_agent.sh
apps/axon_python/src/: agent_server.py  agent_service.proto  pyproject.toml
apps/axon_python/src/agents/: __init__.py  example_agent.py
apps/axon_python/src/axon_python/: agent_wrapper.py  health.py  llm_wrapper.py  run_sync_agent.py
apps/axon_python/src/axon_python/agents/: example_agent.py  research_agent.py
apps/axon_python/test/: test_agent.py
apps/axon_python/tests/: test_pydantic_agent_wrapper.py
axon/: README.md
config/: config.exs  dev.exs  runtime.exs  test.exs
docs/: diagrams_10_20250106.mermaid  diagrams_1_20250106.mermaid  diagrams_2_20250106.mermaid  diagrams_3_20250106.mermaid  diagrams_4_20250106.mermaid  diagrams_5_20250106.mermaid  diagrams_6_20250106.mermaid  diagrams_7_20250106.mermaid  diagrams_8_20250106.mermaid  diagrams_9_20250106.mermaid  pydantic_integration.md  python_integration_architecture.md
docs/20251013/: 01.md  02.md
docs/20251027/: 01.md  02.md  03.md
docs/20251028/: 01_BRAINSTORM_CODEX.md
docs/20251130/: ECOSYSTEM.md
docs/docs2/: TODO.md  (+9 more)
docs2/: ws_intial_rewrite.md
docs_new/: AgentPipelineWorldDomination.txt  CONTINUATION_PROMPT.md  ROADMAP.md  continuation_prompt.md
examples/: altar_ai_integration.exs  stage2_demo.exs
lib/: README.md  application.ex  old_approach_discuss_improvements.md  synapse.ex
lib/priv/python/: pyproject.toml  setup.py
lib/priv/python/src/agents/: example_agent.py
script/: README.md  direction.md  grpc_additional.md  grpc_and_pydanticai_examples.md  mix.exs  pyproject.toml
src/: setup.py  test_agent.py
test/: concurrency_text.ex  fault_tolerance_test.ex  test_helper.ex  test_helper.exs
(+524 files in other folders)
