[tool.poetry]
name = "axon-python"
version = "0.1.0"
description = "Python components for Axon, the Elixir-based AI agent orchestrator."
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "axon_python", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic-ai-slim = {git = "https://github.com/pydantic/pydantic-ai.git", rev = "main"}
httpx = "^0.27.0"
openai = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"