[tool.poetry]
name = "synapse-core"
version = "0.1.0"
description = "Python core functionality for Synapse"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "agents", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
